Fixed style issues at user homepage,banners overflow issues

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -21,7 +21,7 @@
      box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
        0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
      border-radius: 7px;
-     padding: 40px;
+     padding: 32px;
    }
    
    
